[gd_scene load_steps=4 format=3 uid="uid://confirmation_dialog"]

[ext_resource type="Script" path="res://scripts/ui/confirmation_dialog.gd" id="1_dialog_script"]
[ext_resource type="Theme" uid="uid://bqx8yqn7ehynj" path="res://resources/ui_theme.tres" id="2_theme"]
[ext_resource type="FontFile" uid="uid://bek7fih7dv3co" path="res://fonts/button_font.ttf" id="3_font"]

[node name="ConfirmationDialog" type="AcceptDialog"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -60.0
offset_right = 200.0
offset_bottom = 60.0
theme = ExtResource("2_theme")
script = ExtResource("1_dialog_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 15.0
offset_right = -20.0
offset_bottom = -15.0

[node name="MessageLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Are you sure?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CancelButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Cancel"

[node name="ConfirmButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Confirm" 